src/edu/udel/cis/vsl/civl/civlc/preproc/common/PreprocessorParser.java
// $ANTLR 3.4 PreprocessorParser.g 2012-12-22 16:01:02

package edu.udel.cis.vsl.civl.civlc.preproc.common;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class PreprocessorParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALIGNAS", "ALIGNOF", "AMPERSAND", "AND", "ARROW", "ASSERT", "ASSIGN", "ASSUME", "AT", "ATOMIC", "AUTO", "BITANDEQ", "BITOR", "BITOREQ", "BITXOR", "BITXOREQ", "BOOL", "BREAK", "BinaryExponentPart", "CASE", "CChar", "CHAR", "CHARACTER_CONSTANT", "CHOOSE", "COLLECTIVE", "COLON", "COMMA", "COMMENT", "COMPLEX", "CONST", "CONTINUE", "DEFAULT", "DEFINED", "DIV", "DIVEQ", "DO", "DOT", "DOUBLE", "DecimalConstant", "DecimalFloatingConstant", "Digit", "ELLIPSIS", "ELSE", "ENUM", "EQUALS", "EXTERN", "EscapeSequence", "ExponentPart", "FLOAT", "FLOATING_CONSTANT", "FOR", "FloatingSuffix", "FractionalConstant", "GENERIC", "GOTO", "GT", "GTE", "HASH", "HASHHASH", "HEADER_NAME", "HexEscape", "HexFractionalConstant", "HexPrefix", "HexQuad", "HexadecimalConstant", "HexadecimalDigit", "HexadecimalFloatingConstant", "IDENTIFIER", "IF", "IMAGINARY", "INLINE", "INPUT", "INT", "INTEGER_CONSTANT", "INVARIANT", "IdentifierNonDigit", "IntegerSuffix", "LCURLY", "LONG", "LPAREN", "LSQUARE", "LT", "LTE", "LongLongSuffix", "LongSuffix", "MINUSMINUS", "MOD", "MODEQ", "NEQ", "NEWLINE", "NORETURN", "NOT", "NewLine", "NonDigit", "NonZeroDigit", "NotLineStart", "OR", "OTHER", "OUTPUT", "OctalConstant", "OctalDigit", "OctalEscape", "PDEFINE", "PELIF", "PELSE", "PENDIF", "PERROR", "PIF", "PIFDEF", "PIFNDEF", "PINCLUDE", "PLINE", "PLUS", "PLUSEQ", "PLUSPLUS", "PP_NUMBER", "PRAGMA", "PROC", "PUNDEF", "QMARK", "RCURLY", "REGISTER", "RESTRICT", "RETURN", "RPAREN", "RSQUARE", "SChar", "SEMI", "SHIFTLEFT", "SHIFTLEFTEQ", "SHIFTRIGHT", "SHIFTRIGHTEQ", "SHORT", "SIGNED", "SIZEOF", "SPAWN", "STAR", "STAREQ", "STATIC", "STATICASSERT", "STRING_LITERAL", "STRUCT", "SUB", "SUBEQ", "SWITCH", "THREADLOCAL", "TILDE", "TYPEDEF", "UNION", "UNSIGNED", "UniversalCharacterName", "UnsignedSuffix", "VOID", "VOLATILE", "WAIT", "WHEN", "WHILE", "WS", "Zero", "BODY", "EXPR", "FILE", "PARAMLIST", "SEQUENCE", "TEXT_BLOCK"
    };

    public static final int EOF=-1;
    public static final int ALIGNAS=4;
    public static final int ALIGNOF=5;
    public static final int AMPERSAND=6;
    public static final int AND=7;
    public static final int ARROW=8;
    public static final int ASSERT=9;
    public static final int ASSIGN=10;
    public static final int ASSUME=11;
    public static final int AT=12;
    public static final int ATOMIC=13;
    public static final int AUTO=14;
    public static final int BITANDEQ=15;
    public static final int BITOR=16;
    public static final int BITOREQ=17;
    public static final int BITXOR=18;
    public static final int BITXOREQ=19;
    public static final int BOOL=20;
    public static final int BREAK=21;
    public static final int BinaryExponentPart=22;
    public static final int CASE=23;
    public static final int CChar=24;
    public static final int CHAR=25;
    public static final int CHARACTER_CONSTANT=26;
    public static final int CHOOSE=27;
    public static final int COLLECTIVE=28;
    public static final int COLON=29;
    public static final int COMMA=30;
    public static final int COMMENT=31;
    public static final int COMPLEX=32;
    public static final int CONST=33;
    public static final int CONTINUE=34;
    public static final int DEFAULT=35;
    public static final int DEFINED=36;
    public static final int DIV=37;
    public static final int DIVEQ=38;
    public static final int DO=39;
    public static final int DOT=40;
    public static final int DOUBLE=41;
    public static final int DecimalConstant=42;
    public static final int DecimalFloatingConstant=43;
    public static final int Digit=44;
    public static final int ELLIPSIS=45;
    public static final int ELSE=46;
    public static final int ENUM=47;
    public static final int EQUALS=48;
    public static final int EXTERN=49;
    public static final int EscapeSequence=50;
    public static final int ExponentPart=51;
    public static final int FLOAT=52;
    public static final int FLOATING_CONSTANT=53;
    public static final int FOR=54;
    public static final int FloatingSuffix=55;
    public static final int FractionalConstant=56;
    public static final int GENERIC=57;
    public static final int GOTO=58;
    public static final int GT=59;
    public static final int GTE=60;
    public static final int HASH=61;
    public static final int HASHHASH=62;
    public static final int HEADER_NAME=63;
    public static final int HexEscape=64;
    public static final int HexFractionalConstant=65;
    public static final int HexPrefix=66;
    public static final int HexQuad=67;
    public static final int HexadecimalConstant=68;
    public static final int HexadecimalDigit=69;
    public static final int HexadecimalFloatingConstant=70;
    public static final int IDENTIFIER=71;
    public static final int IF=72;
    public static final int IMAGINARY=73;
    public static final int INLINE=74;
    public static final int INPUT=75;
    public static final int INT=76;
    public static final int INTEGER_CONSTANT=77;
    public static final int INVARIANT=78;
    public static final int IdentifierNonDigit=79;
    public static final int IntegerSuffix=80;
    public static final int LCURLY=81;
    public static final int LONG=82;
    public static final int LPAREN=83;
    public static final int LSQUARE=84;
    public static final int LT=85;
    public static final int LTE=86;
    public static final int LongLongSuffix=87;
    public static final int LongSuffix=88;
    public static final int MINUSMINUS=89;
    public static final int MOD=90;
    public static final int MODEQ=91;
    public static final int NEQ=92;
    public static final int NEWLINE=93;
    public static final int NORETURN=94;
    public static final int NOT=95;
    public static final int NewLine=96;
    public static final int NonDigit=97;
    public static final int NonZeroDigit=98;
    public static final int NotLineStart=99;
    public static final int OR=100;
    public static final int OTHER=101;
    public static final int OUTPUT=102;
    public static final int OctalConstant=103;
    public static final int OctalDigit=104;
    public static final int OctalEscape=105;
    public static final int PDEFINE=106;
    public static final int PELIF=107;
    public static final int PELSE=108;
    public static final int PENDIF=109;
    public static final int PERROR=110;
    public static final int PIF=111;
    public static final int PIFDEF=112;
    public static final int PIFNDEF=113;
    public static final int PINCLUDE=114;
    public static final int PLINE=115;
    public static final int PLUS=116;
    public static final int PLUSEQ=117;
    public static final int PLUSPLUS=118;
    public static final int PP_NUMBER=119;
    public static final int PRAGMA=120;
    public static final int PROC=121;
    public static final int PUNDEF=122;
    public static final int QMARK=123;
    public static final int RCURLY=124;
    public static final int REGISTER=125;
    public static final int RESTRICT=126;
    public static final int RETURN=127;
    public static final int RPAREN=128;
    public static final int RSQUARE=129;
    public static final int SChar=130;
    public static final int SEMI=131;
    public static final int SHIFTLEFT=132;
    public static final int SHIFTLEFTEQ=133;
    public static final int SHIFTRIGHT=134;
    public static final int SHIFTRIGHTEQ=135;
    public static final int SHORT=136;
    public static final int SIGNED=137;
    public static final int SIZEOF=138;
    public static final int SPAWN=139;
    public static final int STAR=140;
    public static final int STAREQ=141;
    public static final int STATIC=142;
    public static final int STATICASSERT=143;
    public static final int STRING_LITERAL=144;
    public static final int STRUCT=145;
    public static final int SUB=146;
    public static final int SUBEQ=147;
    public static final int SWITCH=148;
    public static final int THREADLOCAL=149;
    public static final int TILDE=150;
    public static final int TYPEDEF=151;
    public static final int UNION=152;
    public static final int UNSIGNED=153;
    public static final int UniversalCharacterName=154;
    public static final int UnsignedSuffix=155;
    public static final int VOID=156;
    public static final int VOLATILE=157;
    public static final int WAIT=158;
    public static final int WHEN=159;
    public static final int WHILE=160;
    public static final int WS=161;
    public static final int Zero=162;
    public static final int BODY=163;
    public static final int EXPR=164;
    public static final int FILE=165;
    public static final int PARAMLIST=166;
    public static final int SEQUENCE=167;
    public static final int TEXT_BLOCK=168;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public PreprocessorParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public PreprocessorParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return PreprocessorParser.tokenNames; }
    public String getGrammarFileName() { return "PreprocessorParser.g"; }


    @Override
    public void emitErrorMessage(String msg) { // don't try to recover!
        throw new RuntimeException(msg);
    }


    public static class file_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "file"
    // PreprocessorParser.g:45:1: file : block EOF -> ^( FILE ( block )? EOF ) ;
    public final PreprocessorParser.file_return file() throws RecognitionException {
        PreprocessorParser.file_return retval = new PreprocessorParser.file_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF2=null;
        PreprocessorParser.block_return block1 =null;


        Object EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // PreprocessorParser.g:45:7: ( block EOF -> ^( FILE ( block )? EOF ) )
            // PreprocessorParser.g:45:9: block EOF
            {
            pushFollow(FOLLOW_block_in_file120);
            block1=block();

            state._fsp--;

            stream_block.add(block1.getTree());

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_file122);  
            stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: EOF, block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 45:19: -> ^( FILE ( block )? EOF )
            {
                // PreprocessorParser.g:45:22: ^( FILE ( block )? EOF )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(FILE, "FILE")
                , root_1);

                // PreprocessorParser.g:45:29: ( block )?
                if ( stream_block.hasNext() ) {
                    adaptor.addChild(root_1, stream_block.nextTree());

                }
                stream_block.reset();

                adaptor.addChild(root_1, 
                stream_EOF.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "file"


    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block"
    // PreprocessorParser.g:51:1: block : ( directive | textblock )* ;
    public final PreprocessorParser.block_return block() throws RecognitionException {
        PreprocessorParser.block_return retval = new PreprocessorParser.block_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        PreprocessorParser.directive_return directive3 =null;

        PreprocessorParser.textblock_return textblock4 =null;



        try {
            // PreprocessorParser.g:51:8: ( ( directive | textblock )* )
            // PreprocessorParser.g:51:10: ( directive | textblock )*
            {
            root_0 = (Object)adaptor.nil();


            // PreprocessorParser.g:51:10: ( directive | textblock )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==HASH||LA1_0==PDEFINE||(LA1_0 >= PERROR && LA1_0 <= PLINE)||LA1_0==PRAGMA||LA1_0==PUNDEF) ) {
                    alt1=1;
                }
                else if ( ((LA1_0 >= ALIGNAS && LA1_0 <= BREAK)||LA1_0==CASE||(LA1_0 >= CHAR && LA1_0 <= DEFAULT)||(LA1_0 >= DIV && LA1_0 <= DOUBLE)||(LA1_0 >= ELLIPSIS && LA1_0 <= EXTERN)||(LA1_0 >= FLOAT && LA1_0 <= FOR)||(LA1_0 >= GENERIC && LA1_0 <= GTE)||(LA1_0 >= HASHHASH && LA1_0 <= HEADER_NAME)||(LA1_0 >= IDENTIFIER && LA1_0 <= INVARIANT)||(LA1_0 >= LCURLY && LA1_0 <= LTE)||(LA1_0 >= MINUSMINUS && LA1_0 <= NOT)||(LA1_0 >= OR && LA1_0 <= OUTPUT)||(LA1_0 >= PLUS && LA1_0 <= PP_NUMBER)||LA1_0==PROC||(LA1_0 >= QMARK && LA1_0 <= RSQUARE)||(LA1_0 >= SEMI && LA1_0 <= UNSIGNED)||(LA1_0 >= VOID && LA1_0 <= WS)) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // PreprocessorParser.g:51:11: directive
            	    {
            	    pushFollow(FOLLOW_directive_in_block148);
            	    directive3=directive();

            	    state._fsp--;

            	    adaptor.addChild(root_0, directive3.getTree());

            	    }
            	    break;
            	case 2 :
            	    // PreprocessorParser.g:51:23: textblock
            	    {
            	    pushFollow(FOLLOW_textblock_in_block152);
            	    textblock4=textblock();

            	    state._fsp--;

            	    adaptor.addChild(root_0, textblock4.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "block"


    public static class directive_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "directive"
    // PreprocessorParser.g:62:1: directive : ( macrodef | macroundef | includeline | pragmaline | ifblock | ifdefblock | ifndefblock | errorline | lineline | nondirectiveline );
    public final PreprocessorParser.directive_return directive() throws RecognitionException {
        PreprocessorParser.directive_return retval = new PreprocessorParser.directive_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        PreprocessorParser.macrodef_return macrodef5 =null;

        PreprocessorParser.macroundef_return macroundef6 =null;

        PreprocessorParser.includeline_return includeline7 =null;

        PreprocessorParser.pragmaline_return pragmaline8 =null;

        PreprocessorParser.ifblock_return ifblock9 =null;

        PreprocessorParser.ifdefblock_return ifdefblock10 =null;

        PreprocessorParser.ifndefblock_return ifndefblock11 =null;

        PreprocessorParser.errorline_return errorline12 =null;

        PreprocessorParser.lineline_return lineline13 =null;

        PreprocessorParser.nondirectiveline_return nondirectiveline14 =null;



        try {
            // PreprocessorParser.g:62:11: ( macrodef | macroundef | includeline | pragmaline | ifblock | ifdefblock | ifndefblock | errorline | lineline | nondirectiveline )
            int alt2=10;
            switch ( input.LA(1) ) {
            case PDEFINE:
                {
                alt2=1;
                }
                break;
            case PUNDEF:
                {
                alt2=2;
                }
                break;
            case PINCLUDE:
                {
                alt2=3;
                }
                break;
            case PRAGMA:
                {
                alt2=4;
                }
                break;
            case PIF:
                {
                alt2=5;
                }
                break;
            case PIFDEF:
                {
                alt2=6;
                }
                break;
            case PIFNDEF:
                {
                alt2=7;
                }
                break;
            case PERROR:
                {
                alt2=8;
                }
                break;
            case PLINE:
                {
                alt2=9;
                }
                break;
            case HASH:
                {
                alt2=10;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // PreprocessorParser.g:62:13: macrodef
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_macrodef_in_directive165);
                    macrodef5=macrodef();

                    state._fsp--;

                    adaptor.addChild(root_0, macrodef5.getTree());

                    }
                    break;
                case 2 :
                    // PreprocessorParser.g:63:5: macroundef
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_macroundef_in_directive171);
                    macroundef6=macroundef();

                    state._fsp--;

                    adaptor.addChild(root_0, macroundef6.getTree());

                    }
                    break;
                case 3 :
                    // PreprocessorParser.g:64:5: includeline
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_includeline_in_directive177);
                    includeline7=includeline();

                    state._fsp--;

                    adaptor.addChild(root_0, includeline7.getTree());

                    }
                    break;
                case 4 :
                    // PreprocessorParser.g:65:5: pragmaline
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_pragmaline_in_directive183);
                    pragmaline8=pragmaline();

                    state._fsp--;

                    adaptor.addChild(root_0, pragmaline8.getTree());

                    }
                    break;
                case 5 :
                    // PreprocessorParser.g:66:5: ifblock
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ifblock_in_directive189);
                    ifblock9=ifblock();

                    state._fsp--;

                    adaptor.addChild(root_0, ifblock9.getTree());

                    }
                    break;
                case 6 :
                    // PreprocessorParser.g:67:5: ifdefblock
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ifdefblock_in_directive195);
                    ifdefblock10=ifdefblock();

                    state._fsp--;

                    adaptor.addChild(root_0, ifdefblock10.getTree());

                    }
                    break;
                case 7 :
                    // PreprocessorParser.g:68:5: ifndefblock
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ifndefblock_in_directive201);
                    ifndefblock11=ifndefblock();

                    state._fsp--;

                    adaptor.addChild(root_0, ifndefblock11.getTree());

                    }
                    break;
                case 8 :
                    // PreprocessorParser.g:69:5: errorline
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_errorline_in_directive207);
                    errorline12=errorline();

                    state._fsp--;

                    adaptor.addChild(root_0, errorline12.getTree());

                    }
                    break;
                case 9 :
                    // PreprocessorParser.g:70:5: lineline
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_lineline_in_directive213);
                    lineline13=lineline();

                    state._fsp--;

                    adaptor.addChild(root_0, lineline13.getTree());

                    }
                    break;
                case 10 :
                    // PreprocessorParser.g:71:5: nondirectiveline
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_nondirectiveline_in_directive219);
                    nondirectiveline14=nondirectiveline();

                    state._fsp--;

                    adaptor.addChild(root_0, nondirectiveline14.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "directive"


    public static class textblock_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "textblock"
    // PreprocessorParser.g:80:1: textblock : ( options {greedy=true; } : textline )+ -> ^( TEXT_BLOCK ( textline )+ ) ;
    public final PreprocessorParser.textblock_return textblock() throws RecognitionException {
        PreprocessorParser.textblock_return retval = new PreprocessorParser.textblock_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        PreprocessorParser.textline_return textline15 =null;

